@@ -1,3 +1,7 @@
+- Zenith432 : Protect timing code in scan_cpu() from interrupts, use bios for sleep()
+- Zenith432 : Fix setupChosenNode, Tweak asm.s
+- Zenith432 : Change identity snprintf to strncpy + misc printf issues
+- cparm : Implement strlcat()
 - Zenith432 : Sanitize 16-bit assembly
 - Zenith432 : Fix bug in malloc_init, use bios for enableA20()
 - meklort : Slightly improve decive selection name - add os version.
